add delete attribute button to easy mode (nonfunctional)

--- a/src/admin/css/settings.css
+++ b/src/admin/css/settings.css
@@ -19,7 +19,7 @@
   margin-top:0px;
 }
 
-#detrack-attribute-mapping-expert-accordion h3 svg{
+.detrack-delete-attribute-icon{
   padding-right:5px;
 }
 
